# TimeKeeper

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  config.yml  main.cpp  notes.md  saved_charge_example.yml  timekeeper.cpp  timekeeper.hh
config/: config.yml
notes_and_todos/: notes.md
src/: CMakeLists.txt  main.cpp  timekeeper.cpp  timekeeper.hh
